--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -4,17 +4,35 @@
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Sign In</h4>
-                    <div class="mb-2">
-                        <label  class="form-label">Username</label>
-                        <input [(ngModel)]="user.username" type="text" name="" id="" class="form-control">
-                    </div>
-                    <div class="mb-4">
-                        <label  class="form-label">Password</label>
-                        <input [(ngModel)]="user.password" type="password" name="" id="" class="form-control">
-                    </div>
-                    <div class="mb-2">
-                        <button (click)="onLogin()" class="btn btn-primary">Login</button>
-                    </div>
+                    <form [formGroup]="requiredForm" (ngSubmit)="onLogin()">
+                        <div class="mb-2">
+                            <label  class="form-label">Username</label>
+                            <input [(ngModel)]="user.username"
+                            formControlName="username" 
+                            type="text" name="" id="" class="form-control">
+                            <div *ngIf="requiredForm.controls['username'].invalid && requiredForm.controls['username'].touched" 
+                            class="form-text">
+                                <span class="text-danger" *ngIf="requiredForm.controls['username'].errors?.['required']">
+                                    * Required
+                                </span>
+                            </div>
+                        </div>
+                        <div class="mb-4">
+                            <label  class="form-label">Password</label>
+                            <input [(ngModel)]="user.password" 
+                            formControlName="password" 
+                            type="password" name="" id="" class="form-control">
+                            <div *ngIf="requiredForm.controls['password'].invalid && requiredForm.controls['password'].touched" 
+                            class="form-text">
+                                <span class="text-danger" *ngIf="requiredForm.controls['password'].errors?.['required']">
+                                    * Required
+                                </span>
+                            </div>
+                        </div>
+                        <div class="mb-2">
+                            <button type="submit" class="btn btn-primary">Login</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
