--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -51,26 +51,30 @@
             </div>
             <div *ngIf="products.length > 0" class="card">
                 <h5 class="card-header">List Products</h5>
-                <table class="table table-striped" datatable [dtOptions]="dtOptions">
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Price</th>
-                            <th>Discount</th>
-                            <th>Stock</th>
-                            <th>Brand</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let p of products" (click)="showDetailProduct(p)" >
-                            <td> {{p.title}} </td>
-                            <td> {{p.price | currency}} </td>
-                            <td> {{p.discountPercentage}}% </td>
-                            <td> {{p.stock}} </td>
-                            <td> {{p.brand}} </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="card-body">
+                    <table class="table table-striped" datatable [dtOptions]="dtOptions">
+                        <thead>
+                            <tr>
+                                <th>Title</th>
+                                <th>Price</th>
+                                <th>Discount</th>
+                                <th>Stock</th>
+                                <th>Brand</th>
+                                <th>QR Code</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let p of products" (click)="showDetailProduct(p)" >
+                                <td> {{p.title}} </td>
+                                <td> {{p.price | currency}} </td>
+                                <td> {{p.discountPercentage}}% </td>
+                                <td> {{p.stock}} </td>
+                                <td> {{p.brand}} </td>
+                                <td><qr-code [value]="p.title"></qr-code></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
